==> AhDun/Drtos/C51/Drive/Timer.c <==
/*------------------------------------------------------------------------------------------------------------------------
 * 文件名称：Timer.c

 * 文件内容：定时器配置

 * 文件版本：1.0.0

 * 文件作者：阿顿

 * 开发环境：STC8A8K64S4A12@22.1184MHz芯片 & Keil uVision 5 

 * 注    意：
------------------------------------------------------------------------------------------------------------------------*/
/*------------------------------------------------------------------------------------------------------------------------
                                                  加载头文件区
------------------------------------------------------------------------------------------------------------------------*/
#include "Inc_Basic.h"//基本库
#include "Timer.h"
#include "System_Clock.h"
#include "System_Task.h"
#include "CPU.h"
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer0Init

 * 函数功能：定时器0初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
#ifdef Timer0_Enable
void Timer0Init()
{
	TMOD |= 0x01;//定时器0工作方式2，TH0是重装值，TL0是初值
	TH0 = 0xF8;//初值(高8位)
  TL0 = 0xCD;//初值(低8位)
	TR0 = 1;//开启定时器0
	ET0 = 1;//开启定时器0中断
	EA = 1;//开启总中断
}
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer0Interrupt

 * 函数功能：定时器0中断服务

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
void Timer0Interrupt () interrupt 1 
{
	SystemClock();//系统时钟
	TaskSwitch();//任务切换
}
#endif
#ifdef Timer1_Enable
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer1Init

 * 函数功能：定时器1初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
void timer1Init()//系统毫秒定时使用
{
	TMOD |= 0x10;//定时器运行模式
	TH1 = 0xF8;//初值(高8位)
	TL1 = 0xCD; //初值(低8位)
	TR1 = 1;//开启定时器1
	ET1 = 1;//开启定时器1中断
	EA = 1;//开启总中断
}
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer1Interrupt

 * 函数功能：定时器1中断服务

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
void timer1Interrupt() interrupt 3
{
	TH1 = 0xF8;//初值(高8位)
	TL1 = 0xCD; //初值(低8位)
}
#endif
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer2Init

 * 函数功能：定时器2初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
#ifdef Timer2_Enable
void timer2Init()
{
	/* T2H T2L - 定时器 2 计数寄存器*/
	T2H = 0x00;
	T2L = 0x00;
	/*INTCLKO - 中断与时钟输出控制寄存器*/
	//bit2
	INTCLKO &= 0xFB;//关闭时钟输出
//	INTCLKO |= 0x04;//当定时器 2 计数发生溢出时，P1.3 口的电平自动发生翻转
	/*AUXR - 辅助寄存器 1*/
	//bit3
	AUXR  &= 0xF7;//定时器2用作定时器
//	AUXR  |= 0x08;//定时器2用作计数器
	//bit2
	AUXR  &= 0xFB;//12T 模式，即 CPU 时钟 12 分频
//	AUXR  |= 0x04;//1T 模式，即 CPU 时钟不分频分频
	//bit4
//	AUXR  &= 0xEF;//定时器 2 停止计数
	AUXR  |= 0x10;//定时器 2 开始计数
}
void timer2Interrupt() interrupt 12 
{
	
}
#endif
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer3Init

 * 函数功能：定时器3初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
#ifdef Timer3_Enable
void timer3Init()
{
	TH3 = 0x00;//初值(高8位)
	TL3 = 0x00; //初值(低8位)
	EA = 1;//开启总中断
	IE2 |= 0x20;//开启定时器3中断
	T4T3M |= 0x08;//开启定时器3
}
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer3interrupt

 * 函数功能：定时器3中断服务

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
void timer3interrupt() interrupt 19
{

}
#endif
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer4Init

 * 函数功能：定时器4初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
#ifdef Timer4_Enable
void timer4Init()
{
 	TH4 = 0x00;//初值(高8位)
  TL4 = 0x00; //初值(低8位)
	EA = 1;//开启总中断
	IE2 |= 0x40;//开启定时器4中断
	T4T3M |= 0x80;//开启定时器4
}
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：timer4interrupt

 * 函数功能：定时器4中断服务

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
void timer4interrupt() interrupt 20
{
}
#endif
/*------------------------------------------------------------------------------------------------------------------------
 * 函数名称：WKTtimerInit

 * 函数功能：掉电唤醒定时器初始化

 * 输入参数：无

 * 输出参数：无

 * 注    意：无
------------------------------------------------------------------------------------------------------------------------*/
#ifdef WKTtimer_Enable
void WKTtimerInit()
{
 	WKTCL = 0x00;//写入的值必须比实际计数值少 1
	WKTCH = 0x00;//15位定时器
	WKTCL |= 0x80;//启动掉电唤醒定时器
} 
#endif
/*------------------------------------------------------------------------------------------------------------------------
                                                  END
------------------------------------------------------------------------------------------------------------------------*/
